# wagtail-heroicons

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  build.py  download.py  noxfile.py  pyproject.toml
.copier/: package.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py
src/wagtail_heroicons/: __init__.py  _build.py  apps.py  icons.py  wagtail_hooks.py
tests/: conftest.py  parser.py  test_build.py  test_icons.py  test_version.py  test_wagtail_hooks.py
